[package]
name = "snail-countdown"
version = "1.0.2"
authors = ["PowerSnail <hj@powersnail.com>"]
edition = "2018"
repository = "https://github.com/PowerSnail/countdown"
license = "MIT"
description = "The program sleeps for a specified time, and send a system notification."
categories = ["command-line-utilities"]

[dependencies]
notify-rust = "4"
clap = "3.0.0-beta.1"