[package]
name = "snail-countdown"
version = "1.1.0"
authors = ["PowerSnail <hj@powersnail.com>"]
edition = "2021"
repository = "https://github.com/PowerSnail/countdown"
license = "MIT"
description = "Sends a system-wide notification after a countdown."
categories = ["command-line-utilities"]

[dependencies]
notify-rust = "4"
clap = { version = "^3", features = ["derive"] }